task_2/hw-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hw-app
  name: hw-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hw-app
  template:
    metadata:
      labels:
        app: hw-app
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config-nginx
            mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-nginx
          configMap:
            name: nginx-configmap
