task_2/hw-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hw-app
  name: hw-np
spec:
  type: NodePort
  selector:
    app: hw-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
