task_2/hw-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hw-app
  name: hw-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hw-app
  type: ClusterIP
status:
  loadBalancer: {}
